--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <title>Lokesh · Portfolio</title>
+    <title>Home</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
 
@@ -34,7 +33,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Lokesh</a>
+            <a class="navbar-brand" href="#">Port</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,12 +47,12 @@
         </nav>
     </header>
 
-    <main role="main"> 
+    <main role="main">
 
         <section class="jumbotron text-center">
             <div class="container">
-                <h1 class="jumbotron-heading">Hi, I am Lokesh</h1>
-                <p class="lead text-muted">I am a technology enthusiast and I love to learn new things. Here are some of the projects.</p>
+                <h1 class="jumbotron-heading">Text</h1>
+                <p class="lead text-muted">Here are the projects.</p>
                 <p>
                     <a href="mailto:joe@example.com?subject=wants_to_connect" class="btn btn-primary my-2">Email</a>
                 </p>
