--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
-{% load staticfiles %}
 <head>
+    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -13,6 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Font awesome -->
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <style>
         .bd-placeholder-img {
@@ -41,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
                     <a class="nav-item nav-link" href="https://www.linkedin.com/in/lokez/" target="_blank">Linkedin</a>
-                    <a class="nav-item nav-link" href="{% static 'list.pdf' %}" target="_blank">Resume</a>
+                    <a class="nav-item nav-link" href="{% static 'list.pdf' %}">Resume</a>
                     <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
                 </div>
             </div>
@@ -49,40 +51,20 @@
     </header>
 
     <main role="main">
-
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1 class="jumbotron-heading">Text</h1>
-                <p class="lead text-muted">Here are the projects.</p>
-                <p>
-                    <a href="mailto:joe@example.com?subject=wants_to_connect" class="btn btn-primary my-2">Email</a>
-                </p>
-                <img src="{% static 'boxing.png'%}" width="100" alt="">
-            </div>
-        </section>
-
-
-
         <div class="album py-5 bg-light">
             <div class="container">
 
-                <div class="row">
-                    {% for job in jobs.all %}
-                    <div class="col-md-4">
-                        <div class="card mb-4 shadow-sm">
-                            <img class="card-img-top" src="{{ job.image.url}}" alt="" height="200" width="auto"/>
-                            <div class="card-body">
-                                <p class="card-text">{{job.summary}}</p>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
+                <h1 class="text-center">{{blog.title}}</h1><br>
+                <p class="text-center">{{blog.date_posted_pretty}}</p>
+                <img class="img-fluid" src="{{blog.image.url}}" alt="">
+                <br><br>
+                <p>{{blog.body_text}}</p>
+
+                <hr>
+
 
             </div>
         </div>
-
-
     </main>
 
     <footer class="text-muted bg-dark">
