Before hosting to AWS

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -10,17 +10,17 @@
                 <h1>Blogs</h1><br>
                 <div class="row">
                     {% for blogitem in blogitems.all reversed %}
-                    <div class="col-md-4">
-                    <div class="card mb-4 shadow-sm" style="width: 18rem;">
-                      <div class="card-body">
-                        <h5 class="card-title">{{blogitem.title}}</h5>
-                        <p>{{blogitem.date_posted_pretty}}</p>
-                        <p class="card-text">{{blogitem.summary|safe }}</p>
-                        <img class="img-fluid" src="{{blogitem.image.url}}" alt="" width=200><br><br>
-                        <a href="#" class="btn btn-primary">View blog</a>
-                      </div>
-                    </div>
-                    </div>
+                        <div class="col-md-4">
+                        <div class="card mb-4 shadow-sm" style="width: 18rem;">
+                          <div class="card-body">
+                            <h5 class="card-title">{{blogitem.title}}</h5>
+                            <p class="font-weight-light text-muted">{{blogitem.date_posted_pretty}}</p>
+                            <p class="card-text">{{blogitem.summary|safe }}</p>
+                            <img class="img-fluid" src="{{blogitem.image.url}}" alt="" width=200><br><br>
+                            <a href="#" class="btn btn-primary">View blog</a>
+                          </div>
+                        </div>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
