--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -10,6 +10,7 @@
     <title>Home</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -34,15 +35,17 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'home'%}">Port</a>
+            <a class="navbar-brand" href="{% url 'home'%}"><i class="fa fa-home"></i> Port</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="https://www.linkedin.com/in/lokez/" target="_blank">Linkedin</a>
-                    <a class="nav-item nav-link" href="{% static 'list.pdf' %}" target="_blank">Resume</a>
-                    <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
+                    {% with url_name=request.resolver_match.url_name %}
+                    <a class="nav-item nav-link" href="https://www.linkedin.com/in/lokez/" target="_blank"><i class="fa fa-linkedin-square"></i> Linkedin</a>
+                    <a class="nav-item nav-link" href="{% static 'list.pdf' %}" target="_blank"><i class="fa fa-file-pdf-o"></i> Resume</a>
+                    <a class="nav-item nav-link {% if url_name == 'allblogs' %}active{% endif %}" href="{% url 'allblogs' %}"><i class="fa fa-pencil-square-o"></i> Blog</a>
+                    {% endwith %}
                 </div>
             </div>
         </nav>
@@ -54,6 +57,7 @@
     <footer class="text-muted bg-dark">
         <div class="container" >
             <br><br>
+            <p class="text-center text-muted">This site is crafted using Python Django & Bootstrap 4</p>
             <p class="text-center">©️ Copyright - Lokesh {% now "Y" %}</p><br>
             <p class="float-right">
                 <a href="#">Back to top</a>
