--- a/jobs/templates/jobs/base.html
+++ b/jobs/templates/jobs/base.html
@@ -38,7 +38,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'home'%}"><i class="fa fa-home"></i> Port</a>
+            <a class="navbar-brand" href="{% url 'home'%}"><i class="fa fa-home"></i> Portfolio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
