added pos, main tweaks

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -26,7 +26,7 @@
                     <br><br>
                   <h2 class="text-white mt-0">Career Timeline </h2>
                   <hr class="divider light my-4">
-                  <p class="text-light mb-4">Looking back, here's what I did with passion over the years! Not sure how I felt during birth though :) <br>While you are reading this, I am most likely be preparing for the my next big step to get that dream job. </p>
+                  <p class="text-light mb-4">Looking back, here's what I did with passion over the years! Here's a little timeline. </p>
                   <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
 
                 </div>
@@ -58,7 +58,7 @@
                             <img class="card-img-top" src="{{ job.image.url}}" alt="" height="200" width="auto"/>
                             <div class="card-body">
                                 <p class="card-text">{{job.summary}}</p>
-                                <a href="jobs/{{job.id}}"><button type="button" class="btn btn-info ">View project</button></a>
+                                <a href="jobs/{{job.id}}"><button type="button" class="btn btn-info ">View details</button></a>
                             </div>
                         </div>
                     </div>
