--- a/jobs/templates/jobs/jobdetails.html
+++ b/jobs/templates/jobs/jobdetails.html
@@ -11,7 +11,7 @@
             <h1 class="text-center">{{job.title}}</h1><br>
             <img class="img-fluid" src="{{job.image.url}}" alt="">
             <br><br><br><br>
-            <p><i>{{job.summary}}</i></p>
+            <p><strong>{{job.summary}}</strong></p>
             <hr>
             <p>{{job.description|safe}}</p>
             
