--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -9,7 +9,9 @@
                 <h1 class="jumbotron-heading text-muted"><kbd>Hello World!</kbd></h1><br>
 
                 <h4 class="text-muted">I am <span class="text-info">Lokesh Sivakumar</span>.</h4>
-                <p class="lead text-muted">A full stack web/software developer currently employed by Bournemouth University. <br>I am <strong class="text-info">creative, resourceful and talented</strong> and is currently seeking new challenges. </p>
+                <p class="lead text-muted">A full stack web developer in Bournemouth University. <br></p>
+                    <p><kbd>creative</kbd> <kbd>resourceful</kbd> <kbd>talented</kbd> <kbd>avid learner</kbd> <kbd>problem-solving</kbd> <br>
+                        {<kbd class="pro">html</kbd> <kbd class="pro">css</kbd> <kbd class="pro">python 3</kbd> <kbd class="pro">php</kbd> <kbd class="pro">rdbms</kbd> <kbd class="pro">photoshop</kbd> <kbd class="pro">wordpress</kbd>}</p>
                 <!-- <p>
                     <a href="mailto:lokez21@gmail.com" class="btn btn-primary my-2">Email</a>
                 </p> -->
