added key skills

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -17,7 +17,7 @@
                             <p class="font-weight-light text-muted">{{blogitem.date_posted_pretty}}</p>
                             <p class="card-text">{{blogitem.summary|safe }}</p>
                             <img class="img-fluid" src="{{blogitem.image.url}}" alt="" width=200><br><br>
-                            <a href="#" class="btn btn-primary">View blog</a>
+                            <a href="{{blogitem.id}}" class="btn btn-primary">View blog</a>
                           </div>
                         </div>
                         </div>
